# mycelium

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
basidium/: Cargo.toml
basidium/src/: eval.rs  lib.rs  main.rs  trainable.rs  trainer.rs
crates/mycelium-app/: Cargo.toml  tauri.conf.json
crates/mycelium-core/: Cargo.toml
crates/mycelium-gnn/: Cargo.toml  README.md  fetch_models.sh
crates/mycelium-gnn/demo/: dataset.json  glove-demo.txt  metrics.csv  schema.surql
crates/mycelium-gnn/examples/: gen_biaffine_dataset.rs  gen_dataset.rs  gen_dataset_nlp.rs  gen_ngram_dataset.rs  gen_reranker_dataset.rs  inspect_dataset.rs  pipeline_demo.rs  train.rs  train_ngram.rs  train_reranker.rs
crates/mycelium-gnn/src/: biaffine_data.rs  candidate_matcher.rs  conv_graph.rs  embed.rs  encoder.rs  graph.rs  grounding.rs  head.rs  hetero_conv.rs  intent.rs  lib.rs  linguistic_graph.rs  ngram_attn.rs  nlp.rs  ops.rs  orchestrator.rs  query_graph.rs  reranker_data.rs  sage.rs  sage_conv.rs  tensor_ops.rs  training.rs
crates/mycelium-gnn/src/step_by_step/: conv_graph.rs  embed.rs  graph.rs  intent.rs  mod.rs  operations.rs  query_graph.rs  sage.rs  schema.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: builder.rs  condition.rs  hint.rs  intent.rs  lib.rs  module.rs  schema.rs  spore.rs
data/: train.json  val.json
data/fixtures/eval-schema/: comment.surql  task.surql  user.surql
data/fixtures/schema/: agent.surql  appointment.surql  (+16 more)
data/lamella/: batch2.jsonl  create.jsonl  create2.jsonl  create3.jsonl  create4.jsonl  create5.jsonl  create7.jsonl  create8.jsonl  create9.jsonl  dataset.jsonl  delete.jsonl  delete2.jsonl  delete3.jsonl  delete4.jsonl  delete5.jsonl  select.jsonl  select10.jsonl  select11.jsonl  select12.jsonl  select13.jsonl  select2.jsonl  select3.jsonl  select4.jsonl  select5.jsonl  select6.jsonl  select7.jsonl  select8.jsonl  select9.jsonl  targeted.jsonl  targeted_underrep.jsonl  update.jsonl  update10.jsonl  update2.jsonl  update3.jsonl  update4.jsonl  update5.jsonl  update6.jsonl  update7.jsonl  update8.jsonl  update9.jsonl
frontend/: package.json  vite.config.ts
hyphae/: Cargo.toml
hyphae/src/: datum.rs  db.rs  graph.rs  lib.rs  main.rs  model.rs  namer.rs  ops.rs  query.rs  rgcn.rs  sage.rs  schema.rs  task.rs
hyphae/src/namer/: classic.json  classic.py  creative.json  hacker.json  hacker.py  infer.rs  mod.rs  model.rs  profiles.rs  terse.json  terse.py  train.rs  vocab.rs
hyphae/src/pattern/: mod.rs  normalize.rs
hyphae/src/schema/: mod.rs
lamella/: Cargo.toml
lamella/src/: catalog.rs  embed.rs  lib.rs  main.rs  model.rs  query.rs  temporal.rs  train.rs
mycelium/: index.html  package.json
mycelium-gnn/: README.md  fetch_models.sh
mycelium-gnn/examples/: train.rs  train_biaffine.rs
mycelium-gnn/src/: biaffine.rs  ngram_data.rs  nlp.rs  operations.rs  orchestrator.rs  reranker.rs  tensor_ops.rs  training.rs
mycelium/src/: App.tsx
mycelium/src-tauri/: Cargo.toml  tauri.conf.json
septa/: Cargo.toml
septa/src/: lib.rs  model.rs
src-tauri/: Cargo.toml
stipe/: Cargo.toml
stipe/src/: lib.rs
tasks/: totp.rhai
ui/: index.html  vite.config.ts
ui/src/: App.tsx  backend.tsx  composing.ts  index.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: bridge.rs  cmds.rs  lib.rs  state.rs  tasks.rs
(+40 files in other folders)
