[package]
name = "hyphae"
version = "0.1.0"
edition = "2024"

[dependencies]
burn       = { workspace = true }
serde      = { workspace = true }
serde_json = {  workspace = true }
regex      = {  workspace = true }
indicatif  = {  workspace = true }
rand       = "0.10.1"
reqwest    = { version = "0.13.2", features = ["json", "rustls"] }
tokio      = { workspace = true }