[package]
name    = "gnn-burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.20.1", default-features = false, features = ["std", "ndarray", "autodiff", "wgpu"] }
regex = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
ort = "2.0.0-rc.12"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
