[package]
name = "mycelium-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "mycelium_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = {  workspace = true }
ts-rs = "12.0.1"
strsim = "0.11"
hyphae = { path = "../../hyphae" }
totp-rs = "5"
tokio = { workspace = true }

